grafana-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  containers:
  - image: grafana/grafana
    name: grafana
    ports:
    - containerPort: 3000
    resources: {}
    volumeMounts:
    - mountPath: /var/lib/grafana
      name: grafana-storage
  restartPolicy: OnFailure
  volumes:
  - name: grafana-storage
    persistentVolumeClaim:
      claimName: grafana-storage
status: {}
