mosquitto-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mosquitto
    spec:
      containers:
      - image: eclipse-mosquitto
        name: mosquitto
        ports:
        - containerPort: 9001
        - containerPort: 1883
        resources: {}
        volumeMounts:
        - mountPath: /mosquitto/data
          name: mosquitto-storage
      restartPolicy: Always
      volumes:
      - name: mosquitto-storage
        persistentVolumeClaim:
          claimName: mosquitto-storage
status: {}
