mysql-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  containers:
  - args:
    - --default-authentication-plugin=mysql_native_password
    image: mysql
    name: mysql
    ports:
    - containerPort: 3306
    resources: {}
    volumeMounts:
    - mountPath: /var/lib/mysql
      name: mysql-storage
    - mountPath: /docker-entrypoint-initdb.d/mobiusdb.sql
      name: mysql-claim1
  restartPolicy: OnFailure
  volumes:
  - name: mysql-storage
    persistentVolumeClaim:
      claimName: mysql-storage
  - name: mysql-claim1
    persistentVolumeClaim:
      claimName: mysql-claim1
status: {}
