mobius-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etsi-iot-week
  name: mobius
spec:
  ports:
  - name: "7579"
    port: 7579
    targetPort: 7579
  selector:
    app: etsi-iot-week
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: etsi-iot-week
  name: mobius
spec:
  selector:
    matchLabels:
      app: etsi-iot-week
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: etsi-iot-week
    spec:
      containers:
      - image: easyglobalmarket/mobius:latest
        name: mobius
        ports:
        - containerPort: 7579
          name: mobius
      restartPolicy: Always
