mobius-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.expose: "true"
    kompose.service.type: nodeport
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: mobius
  name: mobius
spec:
  ports:
  - name: "7579"
    port: 7579
    targetPort: 7579
  selector:
    io.kompose.service: mobius
  type: NodePort
status:
  loadBalancer: {}
