mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: mosquitto
  name: mosquitto
spec:
  ports:
  - name: "9001"
    port: 9001
    targetPort: 9001
  - name: "1883"
    port: 1883
    targetPort: 1883
  selector:
    io.kompose.service: mosquitto
status:
  loadBalancer: {}
