mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etsi-iot-week-mysql
  name: mysql
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    app: etsi-iot-week-mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: etsi-iot-week-mysql
  name: mysql
spec:
  selector:
    matchLabels:
      app: etsi-iot-week-mysql
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: etsi-iot-week-mysql
    spec:
      containers:
      - image: mysql
        name: mysql
        args:
        - --default-authentication-plugin=mysql_native_password
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-pv
        - mountPath: /docker-entrypoint-initdb.d
          name: mysql-initdb
      restartPolicy: Always
      volumes:
      - name: mysql-pv
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-initdb
        configMap:
          name: mysql-init-db
