onem2m-recorder-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etsi-iot-week
  name: onem2m-recorder
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: etsi-iot-week
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: etsi-iot-week
  name: onem2m-recorder
spec:
  selector:
    matchLabels:
      app: etsi-iot-week
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: etsi-iot-week
    spec:
      containers:
      - image: easyglobalmarket/onem2m-recorder
        name: onem2m-recorder
        ports:
        - containerPort: 8080
      restartPolicy: Always
