postgres-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: etsi-iot-week-postgres
  name: postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    app: etsi-iot-week-postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: etsi-iot-week-postgres
  name: postgres
spec:
  selector:
    matchLabels:
      app: etsi-iot-week-postgres
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: etsi-iot-week-postgres
    spec:
      containers:
      - image: timescale/timescaledb-postgis:latest-pg11
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: postgres-pv
        # Conflicts with Timescale own init scripts
        # Run our own manually for now
        # - mountPath: /docker-entrypoint-initdb.d
        #   name: postgres-initdb
      restartPolicy: Always
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      # - name: postgres-initdb
      #   configMap:
      #     name: postgres-init-db
