mobius-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: mobius
  name: mobius
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: mobius
          servicePort: 7579
status:
  loadBalancer: {}
