nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    nginx.org/rewrites: "serviceName=mobius rewrite=/Mobius;serviceName=grafana rewrite=/grafana"
spec:
  rules:
  - http:
      paths:
        - path: /Mobius
          backend:
            serviceName: mobius
            servicePort: 7579
        - path: /grafana
          backend:
            serviceName: grafana
            servicePort: 3000
